# stackchan-idf

./: .clang-format  .gitignore  .mcp.json.example  CLAUDE.md  CMakeLists.txt  JOURNAL.md  M5_IDF6_PATCHES.md  Makefile  README.en.md  README.md  partitions.csv  partitions_16mb.csv  sdkconfig.defaults  sdkconfig.defaults.atoms3  sdkconfig.defaults.atoms3r  sdkconfig.defaults.cores3  sdkconfig.defaults.esp32s3  sdkconfig.defaults.stopwatch
.claude/skills/release/: SKILL.md
.github/workflows/: pages.yml  release.yml
assets/: aokko_face.avdsl  default_face.avdsl  omega_mouth.avdsl  voices.json
components/avatar/: CMakeLists.txt  animation.cpp  animation.hpp  avatar.cpp  balloon.cpp  balloon.hpp  effect.cpp  effect.hpp  eye.cpp  eye.hpp  eyebrow.cpp  eyebrow.hpp  face.cpp  face.hpp  mouth.cpp  mouth.hpp
components/avatar/include/avatar/: avatar.hpp  draw_context.hpp  expression.hpp  palette.hpp
components/avatar_vm/: CMakeLists.txt  decoder.cpp  default_bytecode.cpp  storage.cpp  vm.cpp
components/avatar_vm/include/avatar/: draw_context.hpp  face_tuning.hpp  palette.hpp
components/avatar_vm/include/avatar_vm/: bytecode.hpp  default_bytecode.hpp  opcodes.hpp  storage.hpp  vm.hpp
components/board/: CMakeLists.txt  audio_module_es8388.cpp  board.cpp  camera_gc0308.cpp  idf_component.yml  io_expander_py32.cpp  led_strip.cpp  nekomimi_led_strip.cpp  si12t_touch.cpp
components/board/include/board/: audio_module_es8388.hpp  board.hpp  camera_gc0308.hpp  io_expander_py32.hpp  led_strip.hpp  nekomimi_led_strip.hpp  si12t_touch.hpp
components/config_service/: CMakeLists.txt  config_service.cpp  config_store.cpp  crypto.cpp  dis.cpp  dis.hpp  gatt_settings.cpp  gatt_settings.hpp  ota.cpp  settings_registry.cpp  staged_config.cpp
components/config_service/include/config_service/: config_service.hpp  config_store.hpp  settings_registry.hpp  staged_config.hpp
components/conversation/: CMakeLists.txt  gemini_live_client.cpp  openai_realtime_client.cpp  psram_allocator.hpp  xiaozhi_client.cpp
components/conversation/include/conversation/: conversation_service.hpp  gemini_live_client.hpp  openai_realtime_client.hpp  xiaozhi_client.hpp
components/espnow_poc/: CMakeLists.txt  Kconfig  espnow_poc.cpp  idf_component.yml
components/espnow_poc/include/espnow_poc/: espnow_poc.hpp
components/espnow_remote/: CMakeLists.txt  espnow_remote.cpp
components/espnow_remote/include/espnow_remote/: espnow_remote.hpp
components/hts_engine/: CMakeLists.txt  README.md
components/hts_engine/include/: HTS_engine.h
components/hts_engine/lib/: HTS_audio.c  HTS_engine.c  HTS_gstream.c  HTS_hidden.h  HTS_label.c  HTS_misc.c  HTS_model.c  HTS_pstream.c  HTS_sstream.c  HTS_vocoder.c
components/jtts/: CMakeLists.txt  Kconfig
components/jtts/include/jtts/: jtts.hpp  jvox.hpp
components/jtts/src/: formant_synth.cpp  formant_tables.cpp  hmm_synth.cpp  hts_label.cpp  internal.hpp  jtts.cpp  jvox_adpcm.cpp  phoneme.cpp  prosody.cpp  synth_dsp.hpp  unit_synth.cpp
components/jtts/test/host/: CMakeLists.txt  gen_formant_t1.cpp  hmm_demo.cpp  test_adpcm.cpp
components/scs_servo/: CMakeLists.txt  scs_bus.cpp  scs_servo.cpp
components/scs_servo/include/scs_servo/: path_generator.hpp  scs_bus.hpp  scs_error.hpp  scs_servo.hpp
components/wifi_config_service/: CMakeLists.txt  http_handlers.cpp  http_handlers.hpp  https_fetch.cpp  https_fetch.hpp  mcp_events.cpp  release_ota.cpp  release_ota.hpp  voice_fetch.cpp  voice_fetch.hpp  wifi_config_service.cpp
components/wifi_config_service/include/wifi_config_service/: mcp_events.hpp  wifi_config_service.hpp
components/wifi_config_service/web/: settings_wifi.html
docs/: avatar_dsl.html  avatar_dsl.md  espnow-m5stackchan-protocol-research.md  index.html  known_issues.md  py32_ioexpander.md
main/: CMakeLists.txt  Kconfig.projbuild  ap_screen.cpp  ap_screen.hpp  app_main.cpp  asr_probe.cpp  asr_probe.hpp  atom_status.cpp  atom_status.hpp  audio_codec.cpp  audio_codec.hpp  audio_stream_sink.cpp  audio_stream_sink.hpp  camera_service.cpp  camera_service.hpp  conversation_task.cpp  conversation_task.hpp  demo_loop.cpp  demo_loop.hpp  device_ui.cpp  device_ui.hpp  face_config.cpp  face_config.hpp  hmm_voice.cpp  hmm_voice.hpp  i2c_dump.cpp  i2c_dump.hpp  idf_component.yml  led_task.cpp  led_task.hpp  lt_timer.cpp  lt_timer.hpp  mic_lip_sync_task.cpp  mic_lip_sync_task.hpp  qr_task.cpp  qr_task.hpp  render_task.cpp  render_task.hpp  screens.cpp  screens.hpp  (+17 more)
patches/: m5gfx-idf6.patch  m5unified-idf6.patch  m5unified.patch
script/: pack_firmware.py
tools/: apply-m5-patches.sh  i2c_decode.py  monitor_log.py  settings.html  settings_common.js
tools/avatar_dsl/: README.md  cli.mjs  compile.js  emitter.js  inject.mjs  lexer.js  opcodes.js  package.json  parser.js
tools/avatar_dsl/test/: round_trip.mjs  smoke.mjs
tools/hts_bench/: README.md  run.sh
tools/jvox/: hts_label_kana.py  pack_jvox.py
tools/remote-flasher/: PROTOCOL.md  flash-current-build.sh  monitor-stream.sh
tools/remote-flasher/server/: README.md  package.json  server.ts
tools/remote-flasher/web/: README.md  esptool-bundle.js  index.html  package.json
tools/remote-flasher/web/src/: esptool-entry.js
tools/stackchan-channel/: README.md  index.ts  package.json
wasm/: avatar_wasm.cpp  build.sh  shell.html
